--- a/apps/frontend/Pages/Customer/Checkout.razor
+++ b/apps/frontend/Pages/Customer/Checkout.razor
@@ -25,7 +25,7 @@
                 Method="SelectedMethod" 
                 OnSubmit="HandlePayment" 
                 IsLoading="@IsProcessing" />
-            <PaymentStatusBadge Status="@PaymentResult" />
+            <PaymentStatus Status="@PaymentResult" />
         </div>
     }
 </div>
