--- a/apps/frontend/Pages/Admin/Users.razor
+++ b/apps/frontend/Pages/Admin/Users.razor
@@ -304,11 +304,25 @@ else
             {
                 users = result.Data;
                 ToastService.ShowToast("User updated successfully", ToastService.ToastLevel.Success);
+                return;
             }
-            else
+
+            var errMessage = result.Error;
+
+            if (errMessage == null)
             {
-                ToastService.ShowToast("Failed to update user.", ToastService.ToastLevel.Error);
+                ToastService.ShowToast("Failed to update user (unknown error)", ToastService.ToastLevel.Error);
+                return;
             }
+
+            if (!string.IsNullOrWhiteSpace(errMessage.Detail))
+            {
+                ToastService.ShowToast(errMessage.Detail, ToastService.ToastLevel.Error);
+                return;
+            }
+            
+            ToastService.ShowToast("Failed to update user.", ToastService.ToastLevel.Error);
+            
         }
         else
         {
