--- a/apps/frontend/Pages/Shared/Components/CustOrderForm.razor
+++ b/apps/frontend/Pages/Shared/Components/CustOrderForm.razor
@@ -130,13 +130,27 @@
             if (result.Success)
             {
                 ClearForm();
-                ToastService.ShowToast("Order successfully created!", ToastService.ToastLevel.Success);
+                ToastService.ShowToast("Order successfully created.", ToastService.ToastLevel.Success);
                 Navigation.NavigateTo("admin/orders");
+                return;
             }
-            else
+
+            var errMessage = result.Error;
+
+            if (errMessage == null)
             {
-                ToastService.ShowToast("Failed to create order!", ToastService.ToastLevel.Error);
+                ToastService.ShowToast("Failed to create order (unknown error)", ToastService.ToastLevel.Error);
+                return;
             }
+
+            if (!string.IsNullOrWhiteSpace(errMessage.Detail))
+            {
+                ToastService.ShowToast(errMessage.Detail, ToastService.ToastLevel.Error);
+                return;
+            }
+            
+            ToastService.ShowToast("Failed to create order.", ToastService.ToastLevel.Error);
+            
         }
         catch (Exception ex)
         {
